# telexkcdbot

./: .dockerignore  .env.default  .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  app.py  bot.py  comics.db  common.yaml  config.py  config_.py  database_.py  databases.py  docker-compose.dev.yml  docker-compose.yml  example.env  fill_comics_db.py  funcs.py  handlers.py  keyboard.py  keyboard_.py  keyboards.py  loader.py  parser_.py  postgresql.conf  pyproject.toml  requirements.txt  xkcd_parser.py
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 3217f0613a27_initial_commit.py
api/src/: __main__.py  api_config.py  config.py  dtos.py  main.py  middlewares.py  router.py  setup.py  types.py  uvicorn_worker.py
api/src/api/app/: __init__.py
api/src/api/core/: config.py
api/src/app/: __init__.py  app.py  cleaner.py  dependency_stubs.py  events.py  exception_handlers.py  middlewares.py  router.py  temp_utils.py
api/src/app/comics/: dtos.py  endpoints.py  exceptions.py  models.py  repo.py  repositories.py  schemas.py  service.py  services.py  types.py
api/src/app/images/: dtos.py  endpoints.py  exceptions.py  models.py  repo.py  service.py  types.py
api/src/app/translations/: dtos.py  endpoints.py  exceptions.py  models.py  repo.py  schemas.py  service.py
api/src/core/: config.py  exceptions.py  settings.py  types.py  utils.py
api/src/core/database/: __init__.py  base.py  base_model.py  mixins.py  uow.py
api/src/core/utils/: __init__.py  uow.py
api/src/database/: base.py  comic_db.py  dto.py  exceptions.py  models.py  repositories.py  user_db.py
api/src/databases/: base.py  comics.py  database.py  models.py  users.py
api/src/helpers/: exceptions.py  filters.py  json_response.py  uow.py
api/src/middlewares/: db_session_middleware.py
api/src/repositories/: comic_repository.py  image_repository.py
api/src/schemas/: mytypes.py  queries.py  schemas.py
api/src/services/: comic_service.py  comics_service.py  converter_service.py  image_service.py
api/src/utils/: exceptions.py  filters.py  json_response.py  json_response_data.py  json_response_dataclasses.py  validators.py
api/src/views/: comic_views.py  comics.py  router.py  routes.py  user_views.py  validators.py
api/tests/: conftest.py  test_comics.py
apps/backend/: alembic.ini  pyproject.toml
apps/backend/src/api/: .env.example  app.py  config.py  gunicorn.conf.py  ioc.py  main.py  my_types.py  types.py  utils.py
apps/backend/src/bot/: config.py  main.py
apps/backend/src/image_processor/: main.py  utils.py
apps/backend/src/scraper/: dtos.py  pbar.py  utils.py
apps/backend/src/scripts/: common.py  scrape_origin_and_upload.py  scrape_translations_and_upload.py
apps/backend/src/shared/: api_rest_client.py  config_loader.py  messages.py  my_types.py  types.py  utils.py
apps/backend/tests/integration/: conftest.py  test_create_comic.py  test_providers.py
apps/backend/tests/unit/: test_image_conversion.py
bot/: .env.example  Dockerfile  app.py  databases.py  fill_comics_db.py  funcs.py  handlers.py  keyboards.py  loader.py  pyproject.toml  xkcd_parser.py
bot/src/: __main__.py  api_client.py  bot_config.py  bot_instance.py  checker.py  comic_data_getter.py  comics_initial_fill.py  common_utils.py  keyboards.py  models.py
bot/src/handlers/: admin.py  callbacks.py  default.py  handlers_utils.py
bot/src/middlewares/: big_brother.py  localization.py
converter/: .dockerignore  .env.template  Dockerfile  gunicorn.conf.py  pyproject.toml
converter/src/: __main__.py  app.py  config.py  conversion.py  handlers.py  helpers.py  utils.py
image-service/: .dockerignore  .env.template  Dockerfile  pyproject.toml
image-service/src/: __main__.py  app.py  config.py  conversion.py  handlers.py  utils.py
projects/bot/: Dockerfile  pyproject.toml
projects/bot/src/: __main__.py  api_client.py  bot_instance.py  comic_data_getter.py  common_utils.py
projects/bot/src/handlers/: admin.py  callbacks.py  default.py  handlers_utils.py
scraper/: pyproject.toml
scraper/src/: dtos.py  exceptions.py  http_client.py  prepopulation.py  uploader.py  utils.py
scraper/src/scrapers/: explain_xkcd.py  explain_xkcd_scraper.py  xkcd_origin.py
scraper/src/scripts/: prepopulation.py
src/api/: Dockerfile  __main__.py  alembic.ini  api_config.py  app.py  config.py  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  server.py  views.py
src/api/application/: dependency_stubs.py  events.py  image_saver.py  middlewares.py  router.py  types.py
src/api/application/comics/: endpoints.py  exceptions.py  models.py  repo.py  service.py  types.py
src/api/application/exceptions/: comic.py  image.py  translation.py
src/api/application/images/: dtos.py  endpoints.py  models.py  repo.py  schemas.py  service.py  types.py
src/api/application/services/: comic.py  image.py  translation.py
src/api/application/translations/: endpoints.py  exceptions.py  models.py  repo.py  service.py  types.py
src/api/core/: exceptions.py  settings.py  types.py  utils.py
src/api/core/database/: __init__.py
src/api/databases/: comics.py  database.py  users.py
src/api/infrastructure/database/: __init__.py  holder.py  types.py  utils.py
src/api/presentation/: dependency_stubs.py  events.py  router.py  stub.py  types.py  upload_reader.py
src/api/presentation/web/: middlewares.py
src/api/web/: server.py
src/bot/: Dockerfile  __main__.py  api_client.py  app.py  bot.py  checker.py  comic_data_getter.py  comics_initial_fill.py  common_utils.py  config.py  databases.py  fill_comics_db.py  funcs.py  handlers.py  keyboards.py  loader.py  logger.py  main.py  paths.py  pyproject.toml  requirements.txt  utils.py  xkcd_parser.py
src/bot/_etc/: _tg_channel_parser.py
src/bot/handlers/: admin.py  callbacks.py  default.py  handlers_utils.py  utils.py
src/bot/middlewares/: big_brother.py  localization.py
src/bot/tests/: bot_test.py
xkcd_watcher/: pyproject.toml
xkcd_watcher/src/: __main__.py
(+567 files in other folders)
