[tool.poetry]
name = "telexkcdbot"
version = "1.0.0"
description = "telexkcdbot"
authors = ["coryphoenixxx <coryphoenixxx@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coryphoenixxx/telexkcdbot"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
ruff = "^0.1"
pre-commit = "^3.3"
black = "^23.11.0"

[tool.ruff]
select = ["B", "E", "W", "F", "N", "COM", "I", "ASYNC", "PL", "RUF", "SIM", "C90", "ARG", "T20", "C4", "UP"]
ignore = ["N805", "PLR0913", "PLR2004", "B904", "PLR0911", "PLR0912", "C901", "B008", "ARG001"]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

show-fixes = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = { }

line-length = 120

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
