[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "telexkcdbot-api"
version = "1.0.0"
description = "telexkcdbot API microservice"
authors = ["coryphoenixxx <coryphoenixxx@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coryphoenixxx/telexkcdbot/api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
python-magic = "^0.4.27"
python-multipart = "^0.0.6"
orjson = "^3.9.10"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
uvicorn = { extras = ["standart"], version = "^0.24.0.post1" }
pydantic-settings = "^2.1.0"
aiofiles = "^23.2.1"
alembic = "^1.13.0"
pillow = "^10.1.0"
sqlalchemy-utils = "^0.41.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["-s", "-v"]
pythonopath = [".venv/bin"]
