[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "telexkcdbot-bot"
version = "1.0.0"
description = "telexkcdbot BOT microservice"
authors = ["coryphoenixxx <coryphoenixxx@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coryphoenixxx/telexkcdbot/bot"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.1.0"
aiohttp = "^3.8.1"
aiosignal = "^1.2.0"
asyncpg = "^0.27.0"
python-decouple = "^3.6"
aiogram = "^2.22.1"
aioschedule = "^0.5.2"
beautifulsoup4 = "^4.11.1"
loguru = "^0.7.0"
lxml = "^4.9.1"
tqdm = "^4.64.1"
deep-translator = "^1.11.4"
