[tool.poetry]
name = "telexkcdbot"
version = "1.0.0"
description = "telexkcdbot"
authors = ["coryphoenixxx <coryphoenixxx@gmail.com>"]
license = "MIT"
repository = "https://github.com/coryphoenixxx/telexkcdbot"
packages = [
    { include = "shared", from = "src" },
    { include = "api", from = "src" },
    { include = "data", from = "src/api/infrastructure" },
]


[tool.poetry.scripts]
scrape_origin_and_upload = "scripts.scrape_origin_and_upload:main"
scrape_translations_and_upload = "scripts.scrape_translations_and_upload:main"


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.api.dependencies]
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.29" }
sqlalchemy = "^2.0.23"
dishka = "^1.2.0"
psycopg = { extras = ["binary", "pool"], version = "^3.1.19" }
python-multipart = "^0.0.9"
orjson = "^3.9.10"
aiofiles = "^23.2.1"
alembic = "^1.13.0"
uvloop = "^0.19.0"
filetype = "^1.2.0"
imagesize = "^1.4.1"
python-slugify = "^8.0.1"
httptools = "^0.6.1"
aiohttp = "^3.9.1"
aiodns = "^3.1.1"
aiohttp-retry = "^2.8.3"
gunicorn = "^22.0.0"
faststream = { extras = ["nats"], version = "^0.5" }
pydantic = "^2.7"
nats-py = "^2.7"
adaptix = "^3.0.0b3"
argon2-cffi = "^23.1.0"


[tool.poetry.group.scraper.dependencies]
aiohttp = "^3.9"
uvloop = "^0.19.0"
faust-cchardet = "^2.1.19"
aiodns = "^3.0.0"
lxml = "^5.1.0"
beautifulsoup4 = "^4.12.2"
aiohttp-retry = "^2.8.3"
rich = "^13.7.0"
asyncclick = "^8.1.7.1"


[tool.poetry.group.image_processor.dependencies]
faststream = { extras = ["nats"], version = "^0.5" }
pillow = "^10.1.0"
pydantic = "^2.7"
nats-py = "^2.7"


[tool.poetry.group.bot.dependencies]
aiogram = "^3.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3"
ruff = "^0.4"
mypy = "^1.10.0"


[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["-s", "-v"]
pythonopath = [".venv/bin"]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "ANN003",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "D400",
    "D415",
    "EM101",
    "EM102",
    "EXE002",
    "FBT",
    "ISC001",
    "N999",
    "PLR0913",
    "TD002",
    "TD003",
    "TRY003",
    "RUF001",
    "RUF002",
    "RUF003",
    "TCH003",
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends", "fastapi.params.Depends",
    "fastapi.Query", "fastapi.params.Query"
]


[tool.mypy]
python_version = "3.12"
pretty = true
strict = true
install_types = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
