[project]
name = "backend"
version = "0.1.0"
description = "xkcd translation service backend"
authors = [
    {name = "coryphoenixxx", email = "coryphoenixxx@gmail.com"},
]
license = "MIT"
repository = "https://github.com/coryphoenixxx/telexkcdbot"
requires-python = ">=3.12"
dependencies = [
    "adaptix>=3.0.0b8",
    "aiodns>=3.2.0",
    "aiofiles>=23.2.1",
    "aiogram>=3.13.0",
    "aiohttp-retry>=2.8.3",
    "aiohttp>=3.10.5",
    "alembic>=1.13.2",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.29.0",
    "beautifulsoup4>=4.12.3",
    "dishka>=1.3.0",
    "fastapi>=0.115.0",
    "faststream[cli,nats]>=0.5.26",
    "faust-cchardet>=2.1.19",
    "filetype>=1.2.0",
    "httptools>=0.6.1",
    "imagesize>=1.4.1",
    "lxml>=5.3.0",
    "orjson>=3.10.7",
    "pillow>=10.4.0",
    "python-multipart>=0.0.9",
    "python-slugify>=8.0.4",
    "rich>=13.8.1",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.30.6",
    "uvloop>=0.20.0",
    "pip>=24.2",
    "aioboto3>=13.1.1",
]

[project.scripts]
api = "backend.main.api:main"
tg_bot = "backend.main.tg_bot:main"
cli = "backend.main.cli:main"

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
    "testcontainers[nats,postgres]>=4.8.1",
    "types-aioboto3[s3]>=13.1.1",
    "types-aiofiles>=24.1.0.20240626",
    "types-requests>=2.32.0.20240914",
    "types-setuptools>=75.1.0.20240917",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = ["-s", "-v", "-x"]
pythonpath = [".venv/bin"]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN401",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "D400",
    "D415",
    "EM101",
    "EM102",
    "EXE002",
    "FBT",
    "FIX002",
    "ISC001",
    "N999",
    "PGH003",
    "PLR0913",
    "PLC0414",
    "PT003",
    "RUF001",
    "RUF002",
    "RUF003",
    "SIM102",
    "TCH",
    "TD002",
    "TD003",
    "TRY003",
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends", "fastapi.params.Depends",
    "fastapi.Query", "fastapi.params.Query"
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101", ]


[tool.mypy]
python_version = "3.12"
pretty = true
strict = true
install_types = true
ignore_missing_imports = true
warn_unused_ignores = false
python_executable = ".venv/bin/python3.12"

[tool.hatch.build.targets.wheel.force-include]
"assets" = "./assets"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
