[tool.poetry]
name = "telexkcdbot-bot"
version = "1.0.0"
description = "telexkcdbot Bot microservice"
authors = ["coryphoenixxx <coryphoenixxx@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coryphoenixxx/telexkcdbot"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.1"
aiosignal = "^1.2.0"
python-decouple = "^3.6"
aiofiles = "^22.1.0"
aiogram = "^2.22.1"
aioschedule = "^0.5.2"
beautifulsoup4 = "^4.11.1"
googletrans = "3.1.0a0"
loguru = "^0.6.0"
lxml = "^4.9.1"
tqdm = "^4.64.1"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[tool.autoflake]
check = false
recursive = true
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.isort]
profile = "black"
skip = [".gitignore"]
src_paths = ["src"]
line_length = 120
include_trailing_comma = "true"

[tool.black]
line-length = 120
targer-version = ["py310"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ['src/bot/tests', 'src/api/tests']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"