[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "telexkcdbot"
version = "1.0.0"
description = "A functional asynchronous telegram-bot for handy reading xkcd comics."
authors = ["coryphoenixxx <coryphoenixxx@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coryphoenixxx/telexkcdbot"

[tool.poetry.dependencies]
python =  "^3.10"
aiohttp = "^3.8.1"
async-timeout = "^4.0.2"
attrs = "^22.1.0"
aiosignal = "^1.2.0"
charset-normalizer = "^2.1.1"
frozenlist = "^1.3.1"
idna = "^2.10"
multidict = "^6.0.2"
yarl = "^1.8.1"
python-decouple = "^3.6"
loguru = "^0.6.0"
asyncpg = "^0.26.0"
