[tool.poetry]
name = "telexkcdbot-api"
version = "0.1.0"
description = ""
authors = ["coryphoenixxx <coryphoenixxx@gmail.com>"]
repository = "https://github.com/coryphoenixxx/telexkcdbot/src/api"

[tool.poetry.dependencies]
python =  "3.10.8"
aiohttp = "^3.8.1"
aiosignal = "^1.2.0"
python-decouple = "^3.6"
loguru = "^0.6.0"
asyncpg = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
