[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "telexkcdbot"
version = "1.0.0"
description = "A functional asynchronous telegram-bot for handy reading xkcd comics."
authors = ["coryphoenixxx <coryphoenixxx@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coryphoenixxx/telexkcdbot"

[tool.poetry.dependencies]
python =  "^3.10"
aiohttp = "^3.8.1"
async-timeout = "^4.0.2"
attrs = "^22.1.0"
aiosignal = "^1.2.0"
charset-normalizer = "^2.1.1"
frozenlist = "^1.3.1"
idna = "^2.10"
multidict = "^6.0.2"
yarl = "^1.8.1"
python-decouple = "^3.6"
aiofiles = "^22.1.0"
aiogram = "^2.22.1"
aioschedule = "^0.5.2"
Babel = "^2.9.1"
beautifulsoup4 = "^4.11.1"
bs4 = "^0.0.1"
certifi = "^2022.6.15.1"
chardet = "^3.0.4"
colorama = "^0.4.5"
googletrans = "^3.1.0a0"
h11 = "^0.9.0"
h2 = "^3.2.0"
hpack = "^3.0.0"
hstspreload = "^2022.9.1"
httpcore = "^0.9.1"
httpx = "^0.13.3"
hyperframe = "^5.2.0"
loguru = "^0.6.0"
lxml = "^4.9.1"
numpy = "^1.23.3"
pytz = "^2022.2.1"
rfc3986 = "^1.5.0"
sniffio = "^1.3.0"
soupsieve = "^2.3.2.post1"
toml = "^0.10.2"
tqdm = "^4.64.1"
urllib3 = "^1.26.12"
win32-setctime = "^1.1.0"
